Can edit all setups + began fix for strategy

--- a/SimTECH/SimTECH/Pages/Setup/Engines.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Engines.razor
@@ -13,6 +13,7 @@
         <HeaderContent>
             <MudTh>Name</MudTh>
             <MudTh>State</MudTh>
+            <MudTh></MudTh>
         </HeaderContent>
         <RowTemplate>
             <MudTd>@context.Name</MudTd>
