Strategies are working already, darn!

--- a/SimTECH/SimTECH/Components/RangeInput.razor
+++ b/SimTECH/SimTECH/Components/RangeInput.razor
@@ -1,6 +1,6 @@
 ﻿<MudContainer>
     @ChildContent
-    <MudTable Items="@Items">
+    <MudTable Items="@Items" Dense="true">
         <HeaderContent>
             <MudTh>Type</MudTh>
             <MudTh>Comparer</MudTh>
