--- a/SimTECH/SimTECH/Pages/Factors/Strategies.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Strategies.razor
@@ -11,7 +11,7 @@
                 <MudText Typo="Typo.h4">Strategies</MudText>
                 <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddStrategy">New</MudButton>
             </MudPaper>
-            <MudDataGrid T="Strategy" Items="@strategyNames" EditMode="DataGridEditMode.Form" CommittedItemChanges="ModifyStrategy" Bordered="true" Dense="true" EditTrigger="DataGridEditTrigger.Manual">
+            <MudDataGrid T="Strategy" Items="@StrategyData" Bordered="true" Dense="true">
                 <Columns>
                     <Column T="Strategy" Field="StintLength" />
                     <Column T="Strategy" Title="Tyres">
@@ -34,7 +34,7 @@
                     <Column T="Strategy" CellClass="d-flex justify-end">
                         <CellTemplate>
                             <MudButtonGroup>
-                                <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@context.Actions.StartEditingItem" />
+                                <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateStrategy(context.Item))" />
                             </MudButtonGroup>
                         </CellTemplate>
                     </Column>
@@ -50,7 +50,7 @@
                 <MudText Typo="Typo.h4">Tyres</MudText>
                 <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddTyre">New</MudButton>
             </MudPaper>
-            <MudDataGrid T="Tyre" Items="@tyreItems" EditMode="DataGridEditMode.Cell" CommittedItemChanges="ModifyTyre" Bordered="true" Dense="true" EditTrigger="DataGridEditTrigger.Manual">
+            <MudDataGrid T="Tyre" Items="@TyreData" Bordered="true" Dense="true">
                 <Columns>
                     <Column T="Tyre" Field="Name" CellStyleFunc="_applyTyreColouring" />
                     <Column T="Tyre" Field="State" IsEditable="false" />
@@ -60,7 +60,7 @@
                     <Column T="Tyre" CellClass="d-flex justify-end">
                         <CellTemplate>
                             <MudButtonGroup>
-                                <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@context.Actions.StartEditingItem" />
+                                <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateTyre(context.Item))" />
                             </MudButtonGroup>
                         </CellTemplate>
                     </Column>
@@ -74,13 +74,13 @@
 </MudContainer>
 
 @code {
-    private List<Strategy> strategyNames = new();
-    private List<Tyre> tyreItems = new();
+    private List<Strategy> StrategyData = new();
+    private List<Tyre> TyreData = new();
 
     protected override async Task OnInitializedAsync()
     {
-        strategyNames = await StrategyService.GetStrategies();
-        tyreItems = await StrategyService.GetTyres();
+        StrategyData = await StrategyService.GetStrategies();
+        TyreData = await StrategyService.GetTyres();
     }
 
     private Func<Tyre, string> _applyTyreColouring => e =>
@@ -88,40 +88,37 @@
         return $"border-color: {e.Colour}";
     };
 
-    void ModifyStrategy(Strategy item)
-    {
-        // TODO: Store edited values
-    }
-
-    async Task AddStrategy()
+    async Task AddStrategy() => await UpdateStrategy(new Strategy());
+    async Task UpdateStrategy(Strategy strategy)
     {
         var parameters = new DialogParameters
         {
-            ["Tyres"] = tyreItems
+            ["Strategy"] = strategy,
+            ["Tyres"] = TyreData
         };
 
-        var dialog = await DialogService.ShowAsync<StrategyEditor>("Create a new strategy", parameters);
+        var dialog = await DialogService.ShowAsync<StrategyEditor>("Modify strategy", parameters);
         var result = await dialog.Result;
 
-        if (!result.Canceled && result.Data != null && result.Data is Strategy newStrategy)
+        if (!result.Canceled && result.Data != null && result.Data is Strategy updatedItem)
         {
-            strategyNames.Add(newStrategy);
+            await StrategyService.UpdateStrategy(updatedItem);
+            StrategyData = await StrategyService.GetStrategies();
         }
     }
 
-    void ModifyTyre(Tyre item)
+    async Task AddTyre() => await UpdateTyre(new Tyre());
+    async Task UpdateTyre(Tyre item)
     {
-        // TODO: Store edited values
-    }
+        var parameters = new DialogParameters { ["Tyre"] = item };
 
-    async Task AddTyre()
-    {
-        var dialog = await DialogService.ShowAsync<TyreEditor>("Create a new tyre");
+        var dialog = await DialogService.ShowAsync<TyreEditor>("Modify tyre", parameters);
         var result = await dialog.Result;
 
-        if (!result.Canceled && result.Data != null && result.Data is Tyre newTyre)
+        if (!result.Canceled && result.Data != null && result.Data is Tyre updatedItem)
         {
-            //TyreElements.Add(newTyre);
+            await StrategyService.UpdateTyre(updatedItem);
+            TyreData = await StrategyService.GetTyres();
         }
     }
 }
