a wee beginning of the season editor

--- a/SimTECH/SimTECH/Pages/Racing/SeasonEditor.razor
+++ b/SimTECH/SimTECH/Pages/Racing/SeasonEditor.razor
@@ -20,8 +20,16 @@
     [Parameter]
     public Season? Season { get; set; }
 
+    [Parameter]
+    public bool? Copied { get; set; }
+
+    private EditSeasonModel model = new();
+
     private void Submit()
     {
+        if (Copied.GetValueOrDefault())
+            model.ResetIdentifierFields();
+
         SeasonDialog?.Close(DialogResult.Ok(Season));
     }
 
