--- a/SimTECH/SimTECH/Pages/Setup/Drivers.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Drivers.razor
@@ -1,5 +1,6 @@
 ﻿@page "/drivers"
 @inject DriverService DriverService
+@inject TraitService TraitService
 @inject IDialogService DialogService
 
 <PageTitle>Drivers</PageTitle>
@@ -9,8 +10,7 @@
         <MudText Typo="Typo.h4">Drivers</MudText>
         <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddDriver">New</MudButton>
     </MudPaper>
-    <MudDataGrid T="Driver" Items="@DriverNames" ReadOnly="@_readOnly" EditMode="@(_editMode ? DataGridEditMode.Cell : DataGridEditMode.Form)"
-        CommittedItemChanges="ModifyDriver" Bordered="true" Dense="true" EditTrigger="DataGridEditTrigger.Manual">
+    <MudDataGrid T="Driver" Items="@DriverNames" ReadOnly="@_readOnly" Bordered="true" Dense="true">
         <Columns>
             <HierarchyColumn T="Driver" />
             <Column T="Driver" Field="FirstName" />
@@ -23,10 +23,10 @@
                 </CellTemplate>
             </Column>
             <Column T="Driver" Field="State" IsEditable="false" />
-            <Column T="Driver" Hidden="@(_editMode || _readOnly)" CellClass="d-flex justify-end">
+            <Column T="Driver" CellClass="d-flex justify-end">
                 <CellTemplate>
                     <MudButtonGroup>
-                        <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@context.Actions.StartEditingItem" />
+                        <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateDriver(context.Item))" />
                     </MudButtonGroup>
                 </CellTemplate>
             </Column>
@@ -48,55 +48,35 @@
             <MudDataGridPager T="Driver" />
         </PagerContent>
     </MudDataGrid>
-    <div class="d-flex flex-wrap mt-4">
-        <MudSwitch @bind-Checked="@_readOnly" Color="Color.Primary">Read Only</MudSwitch>
-        <div class="d-flex justify-start align-center">
-            <p class="mud-typography mud-typography-body1 mud-inherit-text mr-2">Form</p>
-            <MudSwitch @bind-Checked="@_editMode">Cell</MudSwitch>
-        </div>
-    </div>
-    <MudExpansionPanels Style="flex:1">
-        <MudExpansionPanel Text="Show Modifications">
-            @foreach (var message in _modifications)
-            {
-                <MudText Typo="@Typo.body2">@message</MudText>
-            }
-            @if (_modifications.Count > 0)
-            {
-                <div class="d-flex">
-                    <MudSpacer />
-                    <MudButton Class="mt-3" ButtonType="ButtonType.Button" Variant="Variant.Filled" OnClick="@(() => _modifications.Clear())">Clear</MudButton>
-                </div>
-            }
-        </MudExpansionPanel>
-    </MudExpansionPanels>
 </MudContainer>
 
 @code {
-    private bool _readOnly; // NOTE: Useful if/when app goes public
-    private bool _editMode; // NOTE: Need to decide whether editing in-cell is easily possible
+    private bool _readOnly = false; // NOTE: Useful if/when app goes public
 
     private List<Driver> DriverNames = new();
-    private List<string> _modifications = new();
 
     protected override async Task OnInitializedAsync()
     {
         DriverNames = await DriverService.GetDrivers();
     }
 
-    void ModifyDriver(Driver item)
+    async Task AddDriver() => await UpdateDriver(new Driver());
+    async Task UpdateDriver(Driver item)
     {
-        _modifications.Insert(0, $"Changed object: {System.Text.Json.JsonSerializer.Serialize(item)}");
-    }
+        var driverTraits = await TraitService.GetTraits();
 
-    async Task AddDriver()
-    {
-        var dialog = await DialogService.ShowAsync<DriverEditor>("Create a new driver");
+        var parameters = new DialogParameters
+        {
+            ["Driver"] = item,
+            ["Traits"] = driverTraits
+        };
+        var dialog = await DialogService.ShowAsync<DriverEditor>("Modify driver", parameters);
         var result = await dialog.Result;
 
-        if (!result.Canceled && result.Data != null && result.Data is Driver newDriver)
+        if (!result.Canceled && result.Data != null && result.Data is Driver updatedItem)
         {
-            DriverNames.Add(newDriver);
+            await DriverService.UpdateDriver(updatedItem);
+            DriverNames = await DriverService.GetDrivers();
         }
     }
 }
